--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,12 +67,10 @@ endif()
 
 set(CPACK_PACKAGING_INSTALL_PREFIX /)
 
-set(DCMAKE_INSTALL_FULL_LIBDIR=lib)
-
 install(TARGETS appbase
    RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
-   ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
+   ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR} lib
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/appbase
 )
 install_directory_permissions( DIRECTORY ${CMAKE_INSTALL_FULL_INCLUDEDIR}/appbase )
