--- a/cmake/AppBaseConfig.cmake.in
+++ b/cmake/AppBaseConfig.cmake.in
@@ -6,7 +6,12 @@ list(APPEND CMAKE_MODULE_PATH ${AppBase_CMAKE_DIR})
 # NOTE Had to use find_package because find_dependency does not support COMPONENTS or MODULE until 3.8.0
 
 #find_dependency(Boost 1.69 REQUIRED COMPONENTS regex)
-find_package(Boost 1.69 REQUIRED COMPONENTS regex)
+find_package(Boost 1.69 REQUIRED COMPONENTS date_time
+                                            filesystem
+                                            system
+                                            chrono
+                                            program_options
+                                            unit_test_framework)
 list(REMOVE_AT CMAKE_MODULE_PATH -1)
 
 if(NOT TARGET AppBase::AppBase)
