--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,8 @@ target_include_directories(appbase
         ${CMAKE_CURRENT_SOURCE_DIR}
         )
 
-target_compile_features(appbase PRIVATE cxx_std_17)
-target_compile_options(appbase PRIVATE $<$<CXX_COMPILER_ID:GNU>:-Wall>)
+target_compile_features(appbase PUBLIC cxx_std_17)
+target_compile_options(appbase PUBLIC $<$<CXX_COMPILER_ID:GNU>:-Wall>)
 
 target_link_libraries(appbase
         PUBLIC
